--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,11 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         name "O=Notary,L=London,C=GB"
         notary = [validating : true]
         p2pPort 10002
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
+        rpcSettings {
+            address("localhost:10003")
+            adminAddress("localhost:10043")
+        }
+        cordapps = []
     }
     node {
         name "O=PartyA,L=London,C=GB"
@@ -88,7 +92,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
             address("localhost:10006")
             adminAddress("localhost:10046")
         }
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
+        cordapps = []
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
 }
